classDiagram
    %% UI 다이어그램: 사용자 인터페이스 관련 클래스

    %% UI 클래스 관계
    ConsoleUI ..|> GameView : 구현
    GameView --> UIConstants : 사용
    ConsoleUI --> UIConstants : 사용
    GameView ..> PlayerDTO : 표시
    GameView ..> InventoryDTO : 표시
    GameView ..> GameEndDTO : 표시
    
    class GameView {
        <<인터페이스>>
        +displayMenu() void
        +displayLoginMenu() void
        +getIntInput(int min, int max) int
        +getStringInput() String
        +showMessage(String message) void
        +displayPlayerStatus(PlayerDTO playerDTO) void
        +displayDay(int day) void
        +displayEnding(boolean victory) void
        +displayEnding(GameEndDTO endDTO) void
        +displayInventory(InventoryDTO inventoryDTO) void
        +displayCraftingMenu(List~String~ items) void
        +displayAchievements(List~String~ achievements, int totalAchievements) void
        +displayError(String message) void
    }
    
    class ConsoleUI {
        -Scanner scanner
        +ConsoleUI()
        +displayMenu() void
        +displayLoginMenu() void
        +getIntInput(int min, int max) int
        +getStringInput() String
        +showMessage(String message) void
        +displayPlayerStatus(PlayerDTO playerDTO) void
        +displayDay(int day) void
        +displayEnding(boolean victory) void
        +displayEnding(GameEndDTO endDTO) void
        +displayInventory(InventoryDTO inventoryDTO) void
        +displayCraftingMenu(List~String~ items) void
        +displayAchievements(List~String~ achievements, int totalAchievements) void
        +displayError(String message) void
    }
    
    class UIConstants {
        <<정적>>
        +static final String MENU_HEADER
        +static final String MENU_PLAY
        +static final String MENU_ACHIEVEMENTS
        +static final String MENU_QUIT
        +static final String LOGIN_HEADER
        +static final String LOGIN_OPTION
        +static final String REGISTER_OPTION
        +static final String BACK_OPTION
        +static final String GAME_HEADER
        +static final String PLAYER_STATUS
        +static final String ACTION_EXPLORE
        +static final String ACTION_CRAFT
        +static final String ACTION_REST
        +static final String ACTION_END_DAY
        +static final String SUCCESS_CRAFT
        +static final String FAIL_CRAFT
        +static final String SUCCESS_EXPLORE
        +static final String SUCCESS_REST
    } 